--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,18 @@
     package="ru.shanin.appfragments">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
+        android:name="AppStart"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppFragments">
+
+        <service
+            android:name=".service.TypeLightService"
+            android:enabled="true" />
+
         <activity
             android:name=".ActivityResult"
             android:exported="false" />
