--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="false"
-        android:name="AppStart"
+        android:name=".app.AppStart"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,11 +16,11 @@
             android:enabled="true" />
 
         <activity
-            android:name=".ActivityResult"
+            android:name=".ui.noland.ActivityResult"
             android:exported="false" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
