some works with service and sensors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.AppFragments">
 
         <service
-            android:name=".service.SensorsService"
+            android:name=".service.MySensorsService"
             android:enabled="true" />
 
         <activity
